tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of vehicle
Error: vehicle cannot be created
Quitting (on error).
